--- a/styling.css
+++ b/styling.css
@@ -9,10 +9,9 @@ input {
 form {
     padding: 20px 5px;
     border: solid 1px #999;
-    border-radius: 8px;
     width: 230px;
     height: auto;
-    background-image: url(http://content.iphone-room.com/previews/loopt_by_yt458.jpg);
+    background-image: url(http://live-wallpaper.net/iphone/img/app/s/i/simple-blue-gradient-iphone-wallpaper_470fbb907380373f0cd80c443b847e80_raw.jpg);
     background-size: cover;
     text-align: center;
 }
