--- a/styling.css
+++ b/styling.css
@@ -7,11 +7,12 @@ input {
 }
 
 form {
-    padding: 20px 5px;
+    padding: 25px 10px;
     border: solid 1px #999;
-    width: 230px;
+    border-radius: 4px;
+    width: 250px;
     height: auto;
-    background-image: url(http://live-wallpaper.net/iphone/img/app/s/i/simple-blue-gradient-iphone-wallpaper_470fbb907380373f0cd80c443b847e80_raw.jpg);
+    background-image: url(http://www.niceiphonewallpapers.com/wallpapers/iphone4/black_dark_grey_3073.jpg);
     background-size: cover;
     text-align: center;
 }
@@ -20,7 +21,7 @@ h6 {
 margin: 0;
 display: block;
 color: white;
-font-size: 12px;
+font-size: 13px;
 letter-spacing: .5px;
 }
 
@@ -29,28 +30,28 @@ letter-spacing: .5px;
     letter-spacing: 1px;
     font-size: 14px;
     color: #FFF;
+    border: none;
     margin: 0 auto 15px auto;
     width: 80px;
     height: 35px;
-    border: solid 1px #00796B;
     border-radius: 4px;
-    background: #009688;
+    background: #00796B;
     font-family: 'Open Sans', sans-serif;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
  
 #ageBox, #nameBox{
-    margin: 20px auto;
+    margin: 25px auto;
     color: #212121;
     padding-left: 5px;
     height: 32px;
-    background: #E3F2FD;
-    border: solid 1px #90CAF9;
+    background: #FAFAFA;
+    border: solid 1px #F5F5F5;
     border-radius: 4px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     
 }
 
 #myButton:active {
-    background-color: #00796B;
+    background-color: #009688;
 }
